# ollie-desktop-app

./: .gitignore  .pre-commit-config.yaml  README.md  main.spec  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py  multiply.py
tests/: test_multiply.py
